# openhexa-quack

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  devbox.json  docker-compose.yml  pyproject.toml
duckdb_openhexa/: __init__.py  client.py  connection_pool.py  dialect.py  engine.py  functions.py  table_functions.py
superset/: init.sh  superset_config.py
